<resources>
    <string name="app_name">FindACar</string>

    <string name="choose_language">Choose language:</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Navigation menu-->
    <string name="dashboard">Dashboard</string>
    <string name="my_profile">My profile</string>
    <string name="reservations">Reservations</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="log_out">Log out</string>

    <!--My profile-->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_password">Change password</string>

    <!--Change password-->
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>

    <!--Sign up-->
    <string name="password">Password</string>

    <!--Button-->
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="close">Close</string>

    <!--Dashboard-->
    <string name="search_for_a_car">Search for a car</string>
    <string name="search_place_here">Search place here</string>
    <string name="pick_up_date">Pick up</string>
    <string name="return_date">Return</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="useMyLocation">Use current location?</string>

    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="pickUpValidationMessage">Please enter pick up date and time.</string>
    <string name="returnValidationMessage">Please enter return date and time.</string>

    <!--Vehicle details-->
    <string name="name_of_car">Name of car</string>
    <string name="without_deposit">*Without deposit</string>
    <string name="unlimited_mileage">*Unlimited mileage</string>
    <string name="car_specification">CAR SPECIFICATION</string>
    <string name="additional_services">ADDITIONAL SERVICES</string>
    <string name="service_info">SERVICE INFORMATION</string>
    <string name="reviews">REVIEWS</string>
    <string name="btnBook">BOOK</string>
    <string name="seats">seats</string>
    <string name="bags">bags</string>
    <string name="doors">doors</string>
    <string name="removeFav">Remove from favorites</string>
    <string name="addFav">Add to favorites</string>
    <string name="vehiclePrice">VEHICLE PRICE:</string>

    <!--About-->
    <string name="contact">Contact</string>
    <string name="about">About</string>

    <string name="view_on_map">View on map</string>

    <!--Vehicle filtering-->
    <string name="filterPage">Filter vehicles</string>
    <string name="carType">Type of car</string>
    <string name="motor">Motor</string>
    <string name="transmission">Transmission</string>
    <string name="numOfBags">Number of bags</string>
    <string name="airCond">Air conditioning</string>
    <string name="btnApply">APPLY</string>
    <string-array name="carType">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Economy</item>
    </string-array>
    <string-array name="motor">
        <item>Petrol</item>
        <item>Diesel</item>
    </string-array>
    <string-array name="transmission">
        <item>Automatic</item>
        <item>Manual</item>
    </string-array>
    <string-array name="numOfBags">
        <item>2 and more</item>
    </string-array>
    <string-array name="airCond">
        <item>Yes</item>
    </string-array>

    <string name="set_radius">Set radius</string>
    <string name="gps_network_not_enabled">Enable Gps network</string>
    <string name="open_location_settings">Settings</string>
    <string name="hello_blank_fragment">hello_blank_fragment</string>

    <!--Vehicle list-->
    <string name="registratedUntil">Vehicle registrated until</string>
    <string name="price">Price</string>
    <string name="price2">Price:</string>
    <string name="btnDetails">DETAILS</string>
    <string name="btnRate">RATE</string>
    <string name="active">ACTIVE</string>
    <string name="previous">PREVIOUS</string>
    <string name="favorites">Favorites</string>
    <string name="prodYear">Production year</string>
    <string name="total">TOTAL:</string>

    <string name="searcyResults">Search results</string>

</resources>
