<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".activites.CarReservationActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:id="@+id/toolbar"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:elevation="4dp"/>

        <ImageView
            android:id="@+id/slider"
            android:layout_width="252dp"
            android:layout_height="206dp"
            android:layout_below="@id/up_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/hint2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/slider"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/fjord_one"
            android:gravity="center_horizontal"
            android:text="@string/service_info"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/hint3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/hint2"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/fjord_one"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:text="Rent a Car NS Branka Bajica 12, Novi Sad, "
            android:textSize="15dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="7dp"
            android:id="@+id/line"
            android:background="@color/colorLightGray"
            android:layout_below="@id/hint3"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/up_layout"
            android:layout_marginTop="15dp"
            android:layout_below="@id/toolbar">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:layout_centerHorizontal="true"
                android:text="@string/name_of_car"
                android:textSize="27dp"
                android:layout_marginLeft="15dp"
                android:textStyle="bold"
                app:fontFamily="@font/fjord_one" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/clickedImage"
            android:layout_width="37dp"
            android:visibility="gone"
            android:layout_height="37dp"
            android:layout_below="@id/slider"
            android:layout_marginLeft="280dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_like_2" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/line"
            android:layout_marginTop="1dp">


            <TextView
                android:id="@+id/spec2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/car_specification"
                android:textColor="@color/colorPrimary"
                android:textSize="20dp"
                app:fontFamily="@font/fjord_one" />


            <RelativeLayout
                android:id="@+id/specs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/spec2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">


                <ImageView
                    android:id="@+id/photoSeat"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginTop="7dp"
                    android:src="@drawable/ic_seat" />

                <TextView
                    android:id="@+id/numOfSeats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_toRightOf="@id/photoSeat"
                    android:text="asd"
                    app:fontFamily="@font/fjord_one" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="8dp"
                    android:layout_toRightOf="@id/numOfSeats"
                    android:text="seats"
                    app:fontFamily="@font/fjord_one" />


                <ImageView
                    android:id="@+id/photoDoor"
                    android:layout_width="18dp"
                    android:layout_height="20dp"
                    android:layout_below="@id/photoSeat"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_door" />

                <TextView
                    android:id="@+id/numOfDoors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/numOfSeats"
                    android:layout_marginLeft="7dp"
                    android:layout_marginTop="5dp"
                    android:layout_toRightOf="@id/photoDoor"
                    android:text="asd"
                    app:fontFamily="@font/fjord_one" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/numOfSeats"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="6dp"
                    android:layout_toRightOf="@id/numOfDoors"
                    android:text="doors"
                    app:fontFamily="@font/fjord_one" />

                <ImageView
                    android:id="@+id/airC"
                    android:layout_width="18dp"
                    android:layout_height="17dp"
                    android:layout_below="@id/bagsPhoto"
                    android:layout_marginLeft="23dp"
                    android:layout_marginTop="8dp"
                    android:layout_toRightOf="@id/auto_text"
                    android:src="@drawable/ic_air_cond" />

                <ImageView
                    android:id="@+id/bagsPhoto"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="53dp"
                    android:layout_marginTop="9dp"
                    android:layout_toRightOf="@id/fuel"
                    android:src="@drawable/ic_suitcase" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="8dp"
                    android:layout_toRightOf="@id/numOfBags"
                    android:text="bags"
                    app:fontFamily="@font/fjord_one" />

                <TextView
                    android:id="@+id/numOfBags"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_marginTop="8dp"
                    android:layout_toRightOf="@id/bagsPhoto"
                    android:text="s"
                    app:fontFamily="@font/fjord_one" />

                <TextView
                    android:id="@+id/airC_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="32dp"
                    android:layout_toRightOf="@id/airC"
                    android:text="Air conditioning"
                    android:textSize="12dp"
                    app:fontFamily="@font/fjord_one" />

                <ImageView
                    android:id="@+id/autPic"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_below="@id/photoFuel"
                    android:layout_marginLeft="72dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@id/numOfDoors"
                    android:src="@drawable/ic_manual" />

                <TextView
                    android:id="@+id/auto_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/fuel"
                    android:layout_marginLeft="7dp"
                    android:layout_marginTop="5dp"
                    android:layout_toRightOf="@id/autPic"
                    android:text="text"
                    app:fontFamily="@font/fjord_one" />

                <ImageView
                    android:id="@+id/photoFuel"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginLeft="70dp"
                    android:layout_marginTop="8dp"
                    android:layout_toRightOf="@id/numOfSeats"
                    android:src="@drawable/ic_fuel" />

                <TextView
                    android:id="@+id/fuel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="8dp"
                    android:layout_toRightOf="@id/photoFuel"
                    android:text="Fuel"
                    app:fontFamily="@font/fjord_one" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/additional2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lin3">

                <TextView
                    android:id="@+id/addServText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/additional_services"
                    android:textColor="@color/colorPrimary"
                    android:textSize="13dp"
                    app:fontFamily="@font/fjord_one" />

                <LinearLayout
                    android:id="@+id/listAdd2"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="25dp"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_below="@id/addServText2"
                    android:layout_height="wrap_content"/>


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/infoYears2"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_below="@id/lin3"
                android:layout_toRightOf="@id/additional2">

                <TextView
                    android:id="@+id/prodYearTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="18dp"
                    android:fontFamily="@font/fjord_one"
                    android:text="@string/pick_up_date"
                    android:textSize="13dp" />

                <TextView
                    android:id="@+id/yearOfProd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/prodYearTxt"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="45dp"
                    android:text="prod"
                    android:textStyle="bold"
                    app:fontFamily="@font/fjord_one" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/yearOfProd"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="15dp"
                    android:fontFamily="@font/fjord_one"
                    android:text="@string/return_date"
                    android:textSize="13dp" />

                <TextView
                    android:id="@+id/reg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/yearOfProd"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="28dp"
                    android:layout_marginRight="28dp"
                    android:text="reg "
                    android:textStyle="bold"
                    app:fontFamily="@font/fjord_one" />

            </RelativeLayout>



            <View
                android:id="@+id/lin22"
                android:layout_width="match_parent"
                android:layout_height="7dp"
                android:layout_below="@id/additional2"
                android:layout_marginTop="10dp"
                android:background="@color/colorLightGray" />

            <View
                android:id="@+id/lin3"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_below="@id/specs"
                android:background="@color/colorLightGray" />


            <androidx.cardview.widget.CardView
                android:id="@+id/cardV"
                android:layout_width="320dp"
                android:layout_height="67dp"
                android:layout_below="@id/lin22"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="15dp"
                tools:cardCornerRadius="50dp">

                <TextView
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_marginLeft="55dp"
                    android:text="TOTAL:"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20dp"
                    app:fontFamily="@font/fjord_one" />

                <TextView
                    android:id="@+id/totalCost"
                    android:layout_width="114dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginRight="65dp"
                    android:text="12,000 RSD"
                    android:textColor="@color/colorRed"
                    android:textSize="20dp"
                    app:fontFamily="sans-serif" />


            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/book"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_below="@id/cardV"
                android:layout_marginLeft="75dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_background_search"
                android:gravity="center"
                android:text="@android:string/ok"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/cancelRes"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_below="@id/cardV"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_toRightOf="@id/book"
                android:background="@drawable/button_background_search"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/colorWhite" />


        </RelativeLayout>


    </RelativeLayout>


</ScrollView>